smaller thumbnails in the card view, larger on the product page, because, reasons

--- a/config.json
+++ b/config.json
@@ -77,12 +77,12 @@
     "show_product_dimensions": false,
     "product_list_display_mode": "grid",
     "logo-position": "center",
-    "logo_size": "250x100",
+    "logo_size": "600x200",
     "logo_fontSize": 28,
     "brand_size": "190x250",
-    "gallery_size": "300x300",
-    "productgallery_size": "500x659",
-    "product_size": "500x659",
+    "gallery_size": "400x400",
+    "productgallery_size": "150x150",
+    "product_size": "800x800",
     "productview_thumb_size": "50x50",
     "productthumb_size": "100x100",
     "thumb_size": "100x100",
@@ -190,7 +190,7 @@
     "storeName-color": "#333333",
     "body-bg": "#ffffff",
     "header-backgroundColor": "#ffffff",
-    "footer-backgroundColor": "#ffffff",
+    "footer-backgroundColor": "#a96e6e",
     "navUser-color": "#333333",
     "navUser-color-hover": "#757575",
     "navUser-dropdown-backgroundColor": "#ffffff",
