change primary colour to our orange

--- a/config.json
+++ b/config.json
@@ -111,7 +111,7 @@
     "color-textLink--hover": "#757575",
     "color-textLink--active": "#757575",
     "color-textHeading": "#444444",
-    "color-primary": "#757575",
+    "color-primary": "#e65502",
     "color-primaryDark": "#666666",
     "color-primaryDarker": "#333333",
     "color-primaryLight": "#999999",
