adjust footer to be our grey - so we can read the text

--- a/config.json
+++ b/config.json
@@ -190,7 +190,7 @@
     "storeName-color": "#333333",
     "body-bg": "#ffffff",
     "header-backgroundColor": "#ffffff",
-    "footer-backgroundColor": "#a96e6e",
+    "footer-backgroundColor": "#e5e5e5",
     "navUser-color": "#333333",
     "navUser-color-hover": "#757575",
     "navUser-dropdown-backgroundColor": "#ffffff",
